<resources>
    <string name="app_name">Fish &amp; Tips</string>

    <string name="title_home">Accueil</string>
    <string name="title_challenge">Défis</string>
    <string name="title_stats">Statistiques</string>

    <string name="action_settings">Paramètres</string>


    <string name="title_pref_notif">Activer les notifications</string>
    <string name="title_pref_language">Langue</string>
    <string name="title_pref_lang_fr">Français</string>
    <string name="title_pref_lang_en">English</string>
    <string name="title_pref_conf">Autoriser l\'application à partager vos données</string>
    <string name="title_activity_mood">Humeur du jour</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="mon_profil">Mon profil</string>
</resources>
